--- a/Aditya/Prev Papers UI/prev.html
+++ b/Aditya/Prev Papers UI/prev.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="right-column">
-            <img src="/Aditya/Resources/exam_bg1.png" alt="Student Exam">
+            <img src="/Aditya/Resources/exam_bg.jpg" alt="Student Exam">
         </div>
     </div>
 
