--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <title>React App</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="card.css" />
-    <link rel="stylesheet" href="NavBar.css" />
-    <link rel="stylesheet" href="Footer.css" />
-    <link rel="stylesheet" href="NextPage.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/card.css" />
+    <link rel="stylesheet" href="./css/NavBar.css" />
+    <link rel="stylesheet" href="./css/Footer.css" />
+    <link rel="stylesheet" href="./css/NextPage.css" />
+    <link rel="stylesheet" href="./css/QuizPage.css" />
   </head>
 
   <body>
